<resources>
    <string name="app_name">智能助手</string>
    <string name="find_mantic_tip">在%s无线网络中发现了\n一台Mantic智能音箱可连接</string>
    <string name="connect_other">连接另一台Mantic</string>
    <string name="edit_mantic_name">建议使用客厅或者主卧命名，这样可以方便多台音箱的管理</string>
    <string name="item_music">音乐</string>
    <string name="item_business">商业财经</string>
    <string name="item_story">儿童故事</string>
    <string name="item_comic_storytelling">相声评书</string>
    <string name="item_emotional">情感生活</string>
    <string name="item_entertainment">娱乐综艺</string>
    <string name="item_historical">历史人文</string>
    <string name="item_health">健康养身</string>
    <string name="item_news">新闻头条</string>
    <string name="config_network">配置网络</string>
    <string name="fail_connet">连接失败</string>
    <string name="speaker_name">音箱名称</string>
    <string name="exdevice_tip">第1步，开机</string>
    <string name="exdevice_tip1">打开电源设备</string>
    <string name="exdevice_tip2">第2步，开启入网模式</string>
    <string name="exdevice_tip3">轻按设备上的配网键\n进入配置模式</string>
    <string name="exdevice_tip_new">长按音箱上的“暂停/播放”键5秒后开始配网</string>
    <string name="exdevice_tip_new_pdc">长按音箱上的「暂停/播放」键5秒进入配网模式</string>
    <string name="exdevice_tip_new_yls">长按音箱上的「M键」5秒进入配网模式</string>
    <string name="exdevice_tip_new_xb">短按音箱上的「一键配网」进入配网模式</string>
    <string name="exdevice_tip_new_lx">长按音箱上的「M键」5秒进入配网模式</string>
    <string name="action_settings">Settings</string>
    <string name="current_device">当前设备</string>
    <string name="entertainment">娱乐</string>
    <string name="my_channel">我的</string>
    <string name="music_service">音乐服务</string>
    <string name="skills">技能</string>
    <string name="channel_count">&#160;|&#160;共%1$d频道</string>
    <string name="my_like_music">我喜欢的声音</string>
    <string name="music_count">%1$d首</string>
    <string name="channel_type_channel">频道</string>
    <string name="channel_type_radio">电台|直播</string>
    <string name="conn_mode_bluetooth">蓝牙模式</string>
    <string name="fragment_channel_details_title">频道详情</string>
    <string name="fragment_channel_detail_random">随机播放全部</string>
    <string name="toolsbar_close_action_text">关闭</string>
    <string name="channel_management">频道管理</string>
    <string name="channel_new_cancel">取消</string>
    <string name="channel_new_save">保存</string>
    <string name="channel_new_add">添加频道</string>
    <string name="channel_new_content">新增频道内容</string>
    <string name="channel_new_name">新增频道名称</string>
    <string name="batch_management">批量管理</string>
    <string name="upload_song">上传歌单</string>
    <string name="save">保存</string>
    <string name="start">开始</string>
    <string name="title_interest">至少选择2个兴趣</string>
    <string name="legel_tip">如果继续，则表示你同意接受</string>
    <string name="agreement"> <u>服务条款</u></string>
    <string name="privacy"> 及 <u>隐私政策</u>"</string>
    <string name="select_device_title">选择设备</string>
    <string name="next">下一步</string>
    <string name="hiflying_smartlinker_start">开始</string>
    <string name="hiflying_smartlinker_waiting">请稍后&#8230;</string>
    <string name="hiflying_smartlinker_timeout">配置超时!</string>
    <string name="hiflying_smartlinker_completed">SmartLink 完成</string>
    <string name="hiflying_smartlinker_new_module_found" formatted="false">发现新模块: Mac-%s Ip-%s</string>
    <string name="hiflying_smartlinker_no_wifi_connectivity">输入Wifi名称</string>
    <string name="errcode_success">授权成功</string>
    <string name="errcode_cancel">授权取消</string>
    <string name="errcode_deny">授权被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">授权返回</string>
    <string name="loading">下拉加载更多</string>
    <string name="wx_loading">加载中</string>
    <string name="loading_complete">没有更多了</string>
    <string name="device_manage_title">全部设备</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="starting">开启</string>
    <string name="skip">跳过</string>
    <string name="title">DuerIotDemo</string>
    <string name="rda_smart_config">RdaSmartConfig</string>
    <string name="title_activity_qr_bind">QR Bind</string>
    <string name="login">登录</string>
    <string name="login_account">使用百度账户登录</string>
    <string name="no_connected">未连接</string>
    <string name="no_login">昵称</string>
    <string name="logout">退出登录</string>
    <string name="loginout_content">退出后不会删除任何数据，下次登录依然可以使用本帐号。</string>
    <string name="login_waitings">正在载入登录页面</string>
    <string name="login_tips">与百度搜索、百度贴吧、百度云盘等产品通用</string>
    <string name="empty_device_title">从这里添加第一个设备</string>
    <string name="flash_device_list">正在初始化设备列表</string>
    <string name="isloading">正在连接…</string>
    <string name="dev_network_lost">抱歉，您的手机没有连接到网络 \n请连接网络后回到应用</string>
    <string name="app_network_lost">正在连接…</string>
    <string name="setup_network">打开网络</string>
    <string name="mantic_bind">绑定设备</string>
    <string name="mantic_bind_details">请扫描音箱上二维码进行绑定或</string>
    <string name="mantic_bind_change_account">切换账号</string>
    <string name="mantic_bind_title">扫描二维码</string>
    <string name="open_network">请开启网络</string>
    <string name="authorization">授权中</string>
    <string name="smartconfig_dialog_message">绑定成功！是否需要一键配置设备网络？</string>
    <string name="empty_device_content">建议先在百度IoT开发者中心中配置好设备数据点</string>
    <string name="device_list">设备列表</string>
    <string name="refresh_data">刷新数据</string>
    <string name="dialog_nonet_msg">手机还未连上Wi-Fi，请连接上您希望设备接入的Wi-Fi（如您家里的Wi-Fi），连接后请返回APP，将自动跳转到下一步</string>
    <string name="dialog_logout_msg">确定要注销，返回登陆界面吗？</string>
    <string name="dialog_btn_confirm">确定</string>
    <string name="dialog_btn_prompt">提示</string>
    <string name="dialog_btn_back">返回</string>
    <string name="dialog_btn_logout">注销</string>
    <string name="dialog_btn_delete">删除</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_disconnect">连接已断开</string>
    <string name="dialog_sure_to_delete">确定要解除绑定设备吗？</string>
    <string name="dialog_sure_to_off">确定要关闭设备吗？</string>
    <string name="dialog_sure_to_reset">确定要复位吗？</string>
    <string name="dialog_sure_psw_change">账号新密码即将生效，\n是否确认修改？</string>
    <string name="not_processing">暂不处理</string>
    <string name="call_customer_service">拨打客服</string>
    <string name="empty_toolbar">""</string>
    <string name="uuid">设备ID</string>
    <string name="token">Token</string>
    <string name="uuid_device_bind">设备ID绑定</string>
    <string name="uuid_device_bind_title">输入设备的ID、Token进行识别</string>
    <string name="complete">完成</string>
    <string name="device">设备</string>
    <string name="capture_txt_1">扫描设备对应的二维码来识别设备</string>
    <string name="capture_txt_2">没有二维码的设备也可以手动识别</string>
    <string name="capture_manual_bind">通过设备ID手动识别</string>
    <string name="find_device">识别设备</string>
    <string name="account_info">账号信息</string>
    <string name="current_account">当前账号</string>
    <string name="current_account_null">账户名空</string>
    <string name="current_account_tips_pre">账号相关的配置请前往</string>
    <string name="current_account_tips_suffix">百度IoT产品研发中心</string>
    <string name="logout_account">退出账号</string>
    <string name="add_device">添加设备</string>
    <string name="device_info">设备信息</string>
    <string name="next_step">下一步</string>
    <string name="device_name">设备名称</string>
    <string name="input_device_name">输入设备名称</string>
    <string name="wifi_protocol">Wifi协议</string>
    <string name="smart_config">RDA Smartconfig</string>
    <string name="net_mode">联网方式</string>
    <string name="wifi_net">wifi连接</string>
    <string name="device_product">设备型号</string>
    <string name="production_batch">生产批次</string>
    <string name="device_id">设备ID</string>
    <string name="bind_succ">绑定成功</string>
    <string name="bind_fail">绑定失败</string>
    <string name="app_not_bind_project">APP没有绑定该产品</string>
    <string name="uuid_token_err">设备uuid或token错误</string>
    <string name="uuid_token_binded">设备已被绑定</string>
    <string name="server_err">服务器返回错误</string>
    <string name="cancel">取消</string>
    <string name="ok">确认</string>
    <string name="select_protocol">选择无线协议</string>
    <string name="bluetooth_device">蓝牙设备</string>
    <string name="unbind_device">解除设备绑定？</string>
    <string name="unbind_fail">解绑失败</string>
    <string name="unbind_succ">解绑成功</string>
    <string name="input_password">输入密码</string>
    <string name="input_wifi_password">输入Wifi密码</string>
    <string name="wifi_password_tips">设备需要和手机在同一个无线网络</string>
    <string name="skip_step">跳过这个步骤</string>
    <string name="wireless_network">无线网络</string>
    <string name="wireless_password">无线密码</string>
    <string name="wifi_config_succ">wifi配置成功</string>
    <string name="wifi_config_fail">wifi配置失败</string>
    <string name="wifi_config_timeout">wifi配置超时</string>
    <string name="device_setting">设备设置</string>
    <string name="get_data_time_interval">获取数据间隔</string>
    <string name="device_control_log">设备控制日志</string>
    <string name="device_data_log">设备上报日志</string>
    <string name="unbind">解除绑定</string>
    <string name="device_set_online">设备上线</string>
    <string name="second">秒</string>
    <string name="report_point">上报数据点</string>
    <string name="data_report_empty">该数据点没有数据上报</string>
    <string name="control_log_empty">该设备没有控制记录</string>
    <string name="get_data_fail">获取数据失败</string>
    <string name="waiting_data">正在获取数据...</string>
    <string name="control_success">控制成功</string>
    <string name="control_fail">控制失败</string>
    <string name="control_get_fail">获取失败</string>
    <string name="waitting_for_config_wifi">正在配置wifi，请耐心等待…</string>
    <string name="control_double_min">已经是最小值</string>
    <string name="control_double_max">已经是最大值</string>
    <string name="control_finish">任务完成</string>
    <string name="control_failed">执行失败</string>
    <string name="control_running">正在执行</string>
    <string name="control_timeout">任务超时</string>
    <string name="device_control_resource_empty">该设备没有控制数据点</string>
    <string name="device_control_report_empty">该设备没有上报数据点</string>
    <string name="device_name_empty">设备名不能为空</string>
    <string name="set_device_name_failed">设备命名失败</string>
    <string name="set_device_name">设置设备名称</string>
    <string name="device_count_limit">绑定设备达到上限</string>
    <string name="add_new_device">添加新设备</string>
    <string name="bind_succ_set_name_failed">设备绑定成功，设置名称失败</string>
    <string name="device_bind_owner">该设备已被本账号绑定</string>
    <string name="device_bind_other">该设备已被其他账号绑定，请解绑后重新绑定</string>
    <string name="device_qr_err">设备二维码不正确</string>
    <string name="virtua_device">虚拟设备</string>
    <string name="virtual_server_tip">请输入虚拟设备服务端IP和端口信息</string>
    <string name="virtual_device_test">虚拟设备演示</string>
    <string name="menu_suggestions">建议与投诉</string>
    <string name="menu_clock">闹钟</string>
    <string name="help">帮助说明</string>
    <string name="menu_about">关于</string>
    <string name="about_tip">酷曼科技@maan.ai</string>
    <string name="feedback_tip">如果您有什么意见和建议请反馈给我们，我们会尽快反馈给您</string>
    <string name="please_write_content">反馈内容不能为空哦</string>
    <string name="feedback_success">反馈提交成功,感谢您的支持</string>
    <string name="commit">提交</string>
    <string name="setting">设置</string>
    <string name="permission_setting">权限设置</string>
    <string name="soft_update">软件升级</string>
    <string name="firmware_update">固件升级</string>
    <string name="update">更新</string>
    <string name="device_update">设备更新</string>
    <string name="current_version">当前版本：</string>
    <string name="edit">编辑</string>
    <string name="check_complete">检查完毕，去启动配网</string>
    <string name="bt_example_name">蓝牙名称示例：CMBT_XXXXXX</string>
    <string name="bt_example_step_title">请按照以下步骤开始操作：</string>
    <string name="bt_example_step1">1.如果在设备列表里找不到要连接的蓝牙设备，可以打开手机设置-蓝牙选项进行连接（请关闭附近蓝牙设备，因为连接过该音箱的手机可能会自动连接该音箱）。</string>
    <string name="bt_example_step2">2.请确认是在配网模式下进行蓝牙连接（配网模式下3分钟后超时）。</string>
    <string name="bt_example_step3">3.重启设备，再次进入配网模式，重新连接设备。</string>
</resources>