<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/device_list_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:gravity="center"
        android:text="@string/uuid_device_bind_title"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/find_device"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/complete"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_marginTop="13dp"
        android:background="@color/divider" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_marginTop="34dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uuid"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/uuid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/token"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>