<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mantic.control.fragment.ConnectDetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <include
        android:id="@+id/top_bar"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_below="@id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingTop="30dp"
        android:paddingRight="40dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_icon"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_example_name"
            android:textSize="18sp"
            android:textColor="@color/royalblue"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white_70"
            android:text="@string/bt_example_step_title"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white_50"
            android:text="@string/bt_example_step1"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white_50"
            android:text="@string/bt_example_step2"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white_50"
            android:text="@string/bt_example_step3"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/bt_check_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/btn_primary_bg_selector"
        android:gravity="center|bottom">

        <TextView
            android:layout_width="wrap_content"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/check_complete"
            style="@style/BottomRedButtonStyle"/>
    </LinearLayout>

</RelativeLayout>
