<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout style="@style/IoTTopLayout">

        <ImageView
            android:id="@+id/cancel_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_back_selector" />

        <TextView
            android:id="@+id/cancel_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/cancel_img"
            android:gravity="center"
            android:text="@string/device_list"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/find_device"
            android:textColor="@color/white"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:text="@string/bluetooth_device"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:visibility="gone" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <FrameLayout
            android:id="@+id/fl_my_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"></FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/capture_txt_1"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/capture_txt_2"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/bind_uuid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/capture_manual_bind"
                android:textColor="@color/href_text" />
        </LinearLayout>

        <include layout="@layout/shadow_layout" />
    </FrameLayout>
</LinearLayout>