<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/device_list_background"
    android:orientation="vertical">

    <RelativeLayout style="@style/IoTTopLayout">

        <ImageView
            android:id="@+id/cancel_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_back_selector" />

        <TextView
            android:id="@+id/cancel_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/cancel_img"
            android:text="@string/add_device"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/device_info"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:text="@string/next_step"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="165dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/device_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_wifi_icon" />

            <TextView
                android:id="@+id/series_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/set_device_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/musicServiceSubitemListitemHeight">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/device_name"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/device_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:textColor="@color/white" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/bind_detail_list_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/wifi_protocol"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:text="@string/smart_config"
                android:textColor="@color/white" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/divider" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginTop="20dp"
            android:background="@color/divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/bind_detail_list_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/net_mode"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:text="@string/wifi_net"
                android:textColor="@color/white" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/bind_detail_list_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/device_product"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/project_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:textColor="@color/white" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/bind_detail_list_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/production_batch"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/batch_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:textColor="@color/white" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/bind_detail_list_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/device_id"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/device_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:textColor="@color/white" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/divider" />
    </LinearLayout>
</LinearLayout>
